--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "node-adodb": "^5.0.3",
     "simple-excel-to-json": "^2.2.1"
   }
 }
