--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
+    "node-mailer": "^0.1.1",
     "simple-excel-to-json": "^2.2.1"
   }
 }
